Closed Bug 1663488 Opened 5 years ago Closed 5 years ago

Fix reloading when session history in the parent is enabled

Categories

(Core :: DOM: Navigation, defect)

defect

Tracking

()

RESOLVED FIXED
82 Branch
Tracking Status
firefox82 --- fixed

People

(Reporter: peterv, Assigned: peterv)

References

Details

Attachments

(2 files)

No description provided.
Pushed by pvanderbeken@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/1c62042fce47 Forward ChildSHistory::Reload to the parent process with session history in the parent. r=smaug https://hg.mozilla.org/integration/autoland/rev/1bb321bcb262 Fix CanonicalBrowsingContext::NotifyOnHistoryReload. r=smaug
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: