Bug 1663488 - Fix CanonicalBrowsingContext::NotifyOnHistoryReload. r=smaug

Depends on D89421

Differential Revision: https://phabricator.services.mozilla.com/D89422