docshell/base/CanonicalBrowsingContext.cpp
@@ -400,6 +400,23 @@ void CanonicalBrowsingContext::SessionHistoryCommit(uint64_t aLoadId,
   // aSessionHistoryEntryId?
 }
 
+static already_AddRefed<nsDocShellLoadState> CreateLoadInfo(
+    SessionHistoryEntry* aEntry, Maybe<uint64_t> aLoadId) {
+  const SessionHistoryInfo& info = aEntry->Info();
+  RefPtr<nsDocShellLoadState> loadState(new nsDocShellLoadState(info.GetURI()));
+  info.FillLoadInfo(*loadState);
+  UniquePtr<LoadingSessionHistoryInfo> loadingInfo;
+  if (aLoadId.isSome()) {
+    loadingInfo =
+        MakeUnique<LoadingSessionHistoryInfo>(aEntry, aLoadId.value());
+  } else {
+    loadingInfo = MakeUnique<LoadingSessionHistoryInfo>(aEntry);
+  }
+  loadState->SetLoadingSessionHistoryInfo(std::move(loadingInfo));
+
+  return loadState.forget();
+}
+
 void CanonicalBrowsingContext::NotifyOnHistoryReload(
     bool& aCanReload, Maybe<RefPtr<nsDocShellLoadState>>& aLoadState,
     Maybe<bool>& aReloadActiveEntry) {
@@ -410,13 +427,13 @@ void CanonicalBrowsingContext::NotifyOnHistoryReload(
   }
 
   if (mActiveEntry) {
-    aLoadState.emplace();
-    mActiveEntry->CreateLoadInfo(getter_AddRefs(aLoadState.ref()));
+    aLoadState.emplace(CreateLoadInfo(mActiveEntry, Nothing()));
     aReloadActiveEntry.emplace(true);
   } else if (!mLoadingEntries.IsEmpty()) {
-    aLoadState.emplace();
-    mLoadingEntries.LastElement().mEntry->CreateLoadInfo(
-        getter_AddRefs(aLoadState.ref()));
+    const LoadingSessionHistoryEntry& loadingEntry =
+        mLoadingEntries.LastElement();
+    aLoadState.emplace(
+        CreateLoadInfo(loadingEntry.mEntry, Some(loadingEntry.mLoadId)));
     aReloadActiveEntry.emplace(false);
   }
 
